sandc/test/fixtures/astRegression/shouldFail/productions/castExpression/CastToGenericTypeInstantiation.sand
pub class CastToGenericTypeInstantiation {
    foo() {
        a as Foo<T>
    }
}